--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-23T17:07:17Z</date>
+						<date>2018-07-31T00:34:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -50,7 +50,7 @@
 								<key>Size</key>
 								<integer>383766</integer>
 							</dict>
-							<key>files/backgroundImage_110387.png</key>
+							<key>files/backgroundImage_110517.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -90,6 +90,16 @@
 								<key>Size</key>
 								<integer>297644</integer>
 							</dict>
+							<key>files/stacks-image-2c90133-700x398.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WNYrWgw4gMan
+								tiFFTLkLNg==
+								</data>
+								<key>Size</key>
+								<integer>60972</integer>
+							</dict>
 							<key>files/stacks-image-3bd846c-1200x636.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -99,6 +109,16 @@
 								</data>
 								<key>Size</key>
 								<integer>295684</integer>
+							</dict>
+							<key>files/stacks-image-60181c6-600x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dP2sVb4Spr8c
+								ZkrN6/sD8g==
+								</data>
+								<key>Size</key>
+								<integer>115304</integer>
 							</dict>
 							<key>files/stacks-image-69ebcea.jpg</key>
 							<dict>
@@ -110,15 +130,25 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
-							<key>files/stacks-image-776a1ec-700x398.png</key>
+							<key>files/stacks-image-6b69c3d-600x450.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								cY6pp56Ts3OF
-								uJkVeC65IA==
+								KjO9OItNse8O
+								iYfGznwWPg==
 								</data>
 								<key>Size</key>
-								<integer>61018</integer>
+								<integer>82772</integer>
+							</dict>
+							<key>files/stacks-image-7544077-600x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nw3XvflIlz0s
+								I0NXhAX+bw==
+								</data>
+								<key>Size</key>
+								<integer>134193</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -130,6 +160,16 @@
 								<key>Size</key>
 								<integer>239632</integer>
 							</dict>
+							<key>files/stacks-image-92f5cb4-600x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								K20WJb+iC/Gq
+								+n0ASTRm9w==
+								</data>
+								<key>Size</key>
+								<integer>62564</integer>
+							</dict>
 							<key>files/stacks-image-ae82c9c.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -139,6 +179,26 @@
 								</data>
 								<key>Size</key>
 								<integer>228758</integer>
+							</dict>
+							<key>files/stacks-image-b8b914a-600x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								mjiZJKwpPW+K
+								o1FcxjfJhQ==
+								</data>
+								<key>Size</key>
+								<integer>103384</integer>
+							</dict>
+							<key>files/stacks-image-edf4fb1-598x354.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								HLZo/LCvUbtb
+								W8UNCD//cA==
+								</data>
+								<key>Size</key>
+								<integer>126447</integer>
 							</dict>
 							<key>files/stacks-image-edf4fb1.jpg</key>
 							<dict>
@@ -154,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XmGYwNIpLrsM
-								DUzSmkXFPQ==
+								wai5PK7p0Dr/
+								F3iYr2Rakg==
 								</data>
 								<key>Size</key>
-								<integer>123956</integer>
+								<integer>135716</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -174,11 +234,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								o1r1BEE8YzOJ
-								nCr+frDUWg==
+								wZg7p/ir8qEe
+								w87oT/z0BA==
 								</data>
 								<key>Size</key>
-								<integer>62673</integer>
+								<integer>68184</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
