--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,12 +35,12 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-23T17:07:17Z</date>
+						<date>2018-07-31T00:34:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110307.png</key>
+							<key>files/backgroundImage_110311.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -70,15 +70,15 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>files/stacks-image-776a1ec-700x398.png</key>
+							<key>files/stacks-image-2c90133-700x398.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								cY6pp56Ts3OF
-								uJkVeC65IA==
+								WNYrWgw4gMan
+								tiFFTLkLNg==
 								</data>
 								<key>Size</key>
-								<integer>61018</integer>
+								<integer>60972</integer>
 							</dict>
 							<key>files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RM8KJlOqTFNN
-								4+I+rj4ceg==
+								QKRDd9wCuvI3
+								DpcWrPEM4A==
 								</data>
 								<key>Size</key>
-								<integer>93888</integer>
+								<integer>97428</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								P0D3Ke8fmb8a
-								udt8nzgsDQ==
+								UFaL8gmy4Onc
+								iFvxkthBng==
 								</data>
 								<key>Size</key>
-								<integer>33381</integer>
+								<integer>35111</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
