--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,12 +35,12 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-23T17:07:17Z</date>
+						<date>2018-07-31T00:34:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110486.png</key>
+							<key>files/backgroundImage_110490.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -70,15 +70,15 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>files/stacks-image-776a1ec-700x398.png</key>
+							<key>files/stacks-image-2c90133-700x398.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								cY6pp56Ts3OF
-								uJkVeC65IA==
+								WNYrWgw4gMan
+								tiFFTLkLNg==
 								</data>
 								<key>Size</key>
-								<integer>61018</integer>
+								<integer>60972</integer>
 							</dict>
 							<key>files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j1gNGUy9/Llx
-								SimDMjmj3A==
+								5uSwtZcfRrIP
+								kBM3JjEPDA==
 								</data>
 								<key>Size</key>
-								<integer>93933</integer>
+								<integer>97473</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EiUrf5IA16qL
-								cldfg2aVhQ==
+								wQwVsYrErRbA
+								Jx1RaCGu8g==
 								</data>
 								<key>Size</key>
-								<integer>33364</integer>
+								<integer>35094</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
