Press Page Update

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -848,7 +848,7 @@
 					<key>page13 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-27T17:29:30Z</date>
+						<date>2018-08-01T15:10:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -877,21 +877,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v6Hz2Dy7Hc/V
-								luIcAFPd5g==
+								ZSwJ/di/X85O
+								WJx0EiQRbA==
 								</data>
 								<key>Size</key>
-								<integer>16076</integer>
+								<integer>16064</integer>
 							</dict>
 							<key>files/stacks-image-0c9f04e-150x98.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fQA83DERZowh
-								4ItRao9Fow==
+								2BfvQddyyz2W
+								yu29hwCIHA==
 								</data>
 								<key>Size</key>
-								<integer>36473</integer>
+								<integer>36461</integer>
 							</dict>
 							<key>files/stacks-image-0d315c7-126x150.jpg</key>
 							<dict>
@@ -907,51 +907,51 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BZLvZKuqsTXL
-								tioM4/eGYg==
+								oI1f+OAQtZ+0
+								VDezZvB8Dw==
 								</data>
 								<key>Size</key>
-								<integer>21473</integer>
+								<integer>21461</integer>
 							</dict>
 							<key>files/stacks-image-288a3eb-148x48.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8vehudoZ0/bZ
-								Y1xnrLdL+g==
+								GxrpfKykuqDL
+								YLFvmrZlIg==
 								</data>
 								<key>Size</key>
-								<integer>7809</integer>
+								<integer>7797</integer>
 							</dict>
 							<key>files/stacks-image-29f94dd-148x80.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								EYK/gpQVOrqw
-								9IMTJUPVPg==
+								FeSNfjKJBfbS
+								38qV+qETJg==
 								</data>
 								<key>Size</key>
-								<integer>10705</integer>
+								<integer>10693</integer>
 							</dict>
 							<key>files/stacks-image-316f1d3-150x178.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								58ktDdq0lNzn
-								Yslql1aHqg==
+								1qX/pza4LthB
+								PZ1NRZGBPg==
 								</data>
 								<key>Size</key>
-								<integer>39992</integer>
+								<integer>39980</integer>
 							</dict>
 							<key>files/stacks-image-357371c-150x110.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hs6xMzOOWQER
-								xbntXLRaFQ==
+								pUMJFSNGNDlg
+								zxJuHfdzuw==
 								</data>
 								<key>Size</key>
-								<integer>21901</integer>
+								<integer>21889</integer>
 							</dict>
 							<key>files/stacks-image-369360d-150x82.jpg</key>
 							<dict>
@@ -967,11 +967,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YiGLIfCAEpdb
-								+vy5DzrK6g==
+								ci8immLiaZEJ
+								nAo7ILLOaA==
 								</data>
 								<key>Size</key>
-								<integer>30634</integer>
+								<integer>30622</integer>
 							</dict>
 							<key>files/stacks-image-42e96b3-150x98.jpg</key>
 							<dict>
@@ -987,11 +987,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vY6DCUQNRY9u
-								PhyxvCdn8g==
+								wVBRHQLSsjkz
+								Nt1JySFFqg==
 								</data>
 								<key>Size</key>
-								<integer>36737</integer>
+								<integer>36725</integer>
 							</dict>
 							<key>files/stacks-image-592e55b-1198x694.jpg</key>
 							<dict>
@@ -1017,21 +1017,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9mckeN9nbgrV
-								dt3zyAvFow==
+								fAAEte826tA2
+								79bxs88zcg==
 								</data>
 								<key>Size</key>
-								<integer>25527</integer>
+								<integer>25515</integer>
 							</dict>
 							<key>files/stacks-image-75b8789-150x52.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ecVNEUiNjmo9
-								Gn5zTxyBIA==
+								Zjm/ymRucbrj
+								TIaG3sK6Ng==
 								</data>
 								<key>Size</key>
-								<integer>20349</integer>
+								<integer>20337</integer>
 							</dict>
 							<key>files/stacks-image-78d12af-1200x900.jpg</key>
 							<dict>
@@ -1047,11 +1047,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nDD0Q7L8a0xF
-								yngYK86HSg==
+								rTJKDtPxeEXE
+								gi4AKwEtBQ==
 								</data>
 								<key>Size</key>
-								<integer>10420</integer>
+								<integer>10408</integer>
 							</dict>
 							<key>files/stacks-image-8bf4c8f.jpg</key>
 							<dict>
@@ -1087,11 +1087,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4y8cx3yZUltW
-								+NV6U2dP5g==
+								hHDX+24CQekx
+								PiL5m6yi2w==
 								</data>
 								<key>Size</key>
-								<integer>25461</integer>
+								<integer>25449</integer>
 							</dict>
 							<key>files/stacks-image-bed233e-150x120.jpg</key>
 							<dict>
@@ -1147,11 +1147,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RkJW+X1UtPEv
-								0Ocvx0xTwA==
+								u7Dp8hKQVWH1
+								idghLkoaQw==
 								</data>
 								<key>Size</key>
-								<integer>373490</integer>
+								<integer>373478</integer>
 							</dict>
 							<key>files/stacks_page_page13.css</key>
 							<dict>
@@ -1177,11 +1177,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DpaTxbGjNF2u
-								RALECQGS7A==
+								s3Px+XejMCEn
+								wVYtSynQXw==
 								</data>
 								<key>Size</key>
-								<integer>64573</integer>
+								<integer>65101</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8232,7 +8232,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-27T17:29:30Z</date>
+						<date>2018-08-01T15:10:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9271,11 +9271,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								McuHFJyxNDW8
-								m/BHdBj2vw==
+								JbsRLQ+u+Ptr
+								kenqwsFOQQ==
 								</data>
 								<key>Size</key>
-								<integer>3142</integer>
+								<integer>3179</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9288,7 +9288,7 @@
 					<key>rw:theme:foundation - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-31T00:34:35Z</date>
+						<date>2018-08-01T15:10:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9307,31 +9307,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9qY8i5WIVn+H
-								k8+txYIDeg==
+								XcqkOC8KZUQK
+								SE6q49HVdg==
 								</data>
 								<key>Size</key>
-								<integer>134944</integer>
+								<integer>134945</integer>
 							</dict>
 							<key>ie8.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fQWPYERb4jlS
-								JRd45q9xBA==
+								xx7UIVUPpRSq
+								2Y6LRTuybw==
 								</data>
 								<key>Size</key>
-								<integer>27444</integer>
+								<integer>27445</integer>
 							</dict>
 							<key>ie8rem.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								DHhzOLR4+np4
-								mmq+1xouYA==
+								mNmqAGa5+9hM
+								kRw2O7uA8g==
 								</data>
 								<key>Size</key>
-								<integer>2545</integer>
+								<integer>2546</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9359,7 +9359,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAh/30dS+6gAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAiQKAzRG+gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -9370,7 +9370,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCH/fR1MzyA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCJAoDNDPaA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
