--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
@@ -26,14 +26,14 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.1</string>
+					<string>3.6.0</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-27T17:29:30Z</date>
+						<date>2018-08-01T15:10:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,21 +62,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v6Hz2Dy7Hc/V
-								luIcAFPd5g==
+								ZSwJ/di/X85O
+								WJx0EiQRbA==
 								</data>
 								<key>Size</key>
-								<integer>16076</integer>
+								<integer>16064</integer>
 							</dict>
 							<key>files/stacks-image-0c9f04e-150x98.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fQA83DERZowh
-								4ItRao9Fow==
+								2BfvQddyyz2W
+								yu29hwCIHA==
 								</data>
 								<key>Size</key>
-								<integer>36473</integer>
+								<integer>36461</integer>
 							</dict>
 							<key>files/stacks-image-0d315c7-126x150.jpg</key>
 							<dict>
@@ -92,51 +92,51 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BZLvZKuqsTXL
-								tioM4/eGYg==
+								oI1f+OAQtZ+0
+								VDezZvB8Dw==
 								</data>
 								<key>Size</key>
-								<integer>21473</integer>
+								<integer>21461</integer>
 							</dict>
 							<key>files/stacks-image-288a3eb-148x48.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8vehudoZ0/bZ
-								Y1xnrLdL+g==
+								GxrpfKykuqDL
+								YLFvmrZlIg==
 								</data>
 								<key>Size</key>
-								<integer>7809</integer>
+								<integer>7797</integer>
 							</dict>
 							<key>files/stacks-image-29f94dd-148x80.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								EYK/gpQVOrqw
-								9IMTJUPVPg==
+								FeSNfjKJBfbS
+								38qV+qETJg==
 								</data>
 								<key>Size</key>
-								<integer>10705</integer>
+								<integer>10693</integer>
 							</dict>
 							<key>files/stacks-image-316f1d3-150x178.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								58ktDdq0lNzn
-								Yslql1aHqg==
+								1qX/pza4LthB
+								PZ1NRZGBPg==
 								</data>
 								<key>Size</key>
-								<integer>39992</integer>
+								<integer>39980</integer>
 							</dict>
 							<key>files/stacks-image-357371c-150x110.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hs6xMzOOWQER
-								xbntXLRaFQ==
+								pUMJFSNGNDlg
+								zxJuHfdzuw==
 								</data>
 								<key>Size</key>
-								<integer>21901</integer>
+								<integer>21889</integer>
 							</dict>
 							<key>files/stacks-image-369360d-150x82.jpg</key>
 							<dict>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YiGLIfCAEpdb
-								+vy5DzrK6g==
+								ci8immLiaZEJ
+								nAo7ILLOaA==
 								</data>
 								<key>Size</key>
-								<integer>30634</integer>
+								<integer>30622</integer>
 							</dict>
 							<key>files/stacks-image-42e96b3-150x98.jpg</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vY6DCUQNRY9u
-								PhyxvCdn8g==
+								wVBRHQLSsjkz
+								Nt1JySFFqg==
 								</data>
 								<key>Size</key>
-								<integer>36737</integer>
+								<integer>36725</integer>
 							</dict>
 							<key>files/stacks-image-592e55b-1198x694.jpg</key>
 							<dict>
@@ -202,21 +202,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9mckeN9nbgrV
-								dt3zyAvFow==
+								fAAEte826tA2
+								79bxs88zcg==
 								</data>
 								<key>Size</key>
-								<integer>25527</integer>
+								<integer>25515</integer>
 							</dict>
 							<key>files/stacks-image-75b8789-150x52.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ecVNEUiNjmo9
-								Gn5zTxyBIA==
+								Zjm/ymRucbrj
+								TIaG3sK6Ng==
 								</data>
 								<key>Size</key>
-								<integer>20349</integer>
+								<integer>20337</integer>
 							</dict>
 							<key>files/stacks-image-78d12af-1200x900.jpg</key>
 							<dict>
@@ -232,11 +232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nDD0Q7L8a0xF
-								yngYK86HSg==
+								rTJKDtPxeEXE
+								gi4AKwEtBQ==
 								</data>
 								<key>Size</key>
-								<integer>10420</integer>
+								<integer>10408</integer>
 							</dict>
 							<key>files/stacks-image-8bf4c8f.jpg</key>
 							<dict>
@@ -272,11 +272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4y8cx3yZUltW
-								+NV6U2dP5g==
+								hHDX+24CQekx
+								PiL5m6yi2w==
 								</data>
 								<key>Size</key>
-								<integer>25461</integer>
+								<integer>25449</integer>
 							</dict>
 							<key>files/stacks-image-bed233e-150x120.jpg</key>
 							<dict>
@@ -332,11 +332,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RkJW+X1UtPEv
-								0Ocvx0xTwA==
+								u7Dp8hKQVWH1
+								idghLkoaQw==
 								</data>
 								<key>Size</key>
-								<integer>373490</integer>
+								<integer>373478</integer>
 							</dict>
 							<key>files/stacks_page_page13.css</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DpaTxbGjNF2u
-								RALECQGS7A==
+								s3Px+XejMCEn
+								wVYtSynQXw==
 								</data>
 								<key>Size</key>
-								<integer>64573</integer>
+								<integer>65101</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
